# ImgEditCM

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  vcpkg.json
convolution_matrix/: CMakeLists.txt
convolution_matrix/src/: convolution_matrix.cpp  convolution_matrix.h  convolution_matrix_img.cpp  convolution_matrix_img.h  gui.cpp  kernels.h  test.cpp  win_utils.cpp
